--- a/src/styles.module.css
+++ b/src/styles.module.css
@@ -24,7 +24,11 @@ body {
     height: 100%;
   }
   
-
+  .buttons {
+    width: 60%;
+    position:relative;
+    display:inline-block;
+    vertical-align:middle;  }
 
 .vertical-center {
   width: 150px;
