custom button and alignement

--- a/src/index.css
+++ b/src/index.css
@@ -12,3 +12,9 @@ code {
     monospace;
 }
 
+.buttons {
+  position: absolute!important;
+  z-index: 10!important;
+  top: 70%!important;
+  text-align: center!important;
+ }
