--- a/src/App.css
+++ b/src/App.css
@@ -30,3 +30,10 @@ body {
   height: 50px;
   background-color: white;
 }
+
+.buttons {
+  position: absolute!important;
+  z-index: 10!important;
+  top: 70%!important;
+  text-align: center!important;
+ }
