--- a/src/styles.module.css
+++ b/src/styles.module.css
@@ -13,7 +13,7 @@ body {
   }
   
   .sigContainer {
-    width: 60%;
+    width: 50%;
     height: 50%;
     margin: 0 auto;
     background-color: #fff;
@@ -23,21 +23,35 @@ body {
     width: 100%;
     height: 100%;
   }
-  
-  .buttons {
-    width: 60%;
-    position:relative;
-    display:inline-block;
-    vertical-align:middle;  }
 
-.vertical-center {
-  width: 150px;
-  margin:0;
-  position: absolute;
-  top: 50%;
-  -ms-transform: translateY(-50%);
-  transform: translateY(-50%)
-}
+
+  a:hover{
+    color : white;
+  }
+
+  a {
+    width : 200px;
+    height : 70px;
+  }
+
+  Button {
+    width : 200px;
+    height : 70px;
+  }
+
+  .noPadding{
+    padding-left: 0!important;
+    padding-right: 0!important;
+  }
+  
+  .vertical-center {
+    width: 150px;
+    margin:0;
+    position: absolute;
+    top: 50%;
+    -ms-transform: translateY(-50%);
+    transform: translateY(-50%)
+  }
   
   .sigImage {
     background-size: 100px 50px;
