--- a/src/styles.module.css
+++ b/src/styles.module.css
@@ -13,8 +13,9 @@ body {
   }
   
   .sigContainer {
-    width: 90%;
-    height: 90%;
+    width: 70%;
+    height: 70%;
+    margin: 0 auto;
     background-color: #fff;
   }
   
