custom button and alignement

--- a/src/styles.module.css
+++ b/src/styles.module.css
@@ -13,6 +13,8 @@ body {
   }
   
   .sigContainer {
+    overflow:visible;
+    position:absolute;
     width: 70%;
     height: 70%;
     margin: 0 auto;
