--- a/src/styles.module.css
+++ b/src/styles.module.css
@@ -13,7 +13,7 @@ body {
   }
   
   .sigContainer {
-    overflow:visible;
+    position: relative;
     width: 100%;
     height: 50%;
     margin: 0 auto;
@@ -21,6 +21,7 @@ body {
   }
   
   .sigPad {
+    position: absolute;
     width: 100%;
     height: 100%;
   }
