--- a/src/styles.module.css
+++ b/src/styles.module.css
@@ -13,9 +13,7 @@ body {
   }
   
   .sigContainer {
-    position: relative;
-    width: 100%;
-    height: 50%;
+    height: 300px;
     margin: 0 auto;
     background-color: #fff;
   }
