--- a/src/styles.module.css
+++ b/src/styles.module.css
@@ -13,13 +13,12 @@ body {
   }
   
   .sigContainer {
-    height: 300px;
+    height: 100%;
     margin: 0 auto;
     background-color: #fff;
   }
   
   .sigPad {
-    position: absolute;
     width: 100%;
     height: 100%;
   }
