--- a/src/styles.module.css
+++ b/src/styles.module.css
@@ -13,6 +13,7 @@ body {
   }
   
   .sigContainer {
+    width: 50%;
     height: 50%;
     margin: 0 auto;
     background-color: #fff;
@@ -20,7 +21,7 @@ body {
   
   .sigPad {
     width: 100%;
-    height: 50%;
+    height: 100%;
   }
 
 
@@ -29,7 +30,7 @@ body {
   }
 
   a {
-    width : 200px;
+     width : 200px;
     height : 70px;
   }
 
